--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary btn-large">まずは無料で相談する</a>
-                        <a href="https://lin.ee/9i6mOpiC" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
+                        <a href="https://lin.ee/xPW07fW" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
                             <i class="fab fa-line"></i> LINEで相談する
                         </a>
                     </div>
@@ -201,7 +201,7 @@
                         <p>「何から相談すればいいか分からない」という方も大歓迎です。<br>友だち追加後、簡単なアンケートにお答えいただくだけで、貴社に合ったSNS活用法をご提案します。</p>
                     </div>
                     <div class="line-cta-button">
-                        <a href="https://lin.ee/9i6mOpiC" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
+                        <a href="https://lin.ee/xPW07fW" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
                             <i class="fab fa-line"></i> 友だち追加はこちら
                         </a>
                     </div>
