--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     </p>
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary btn-large">まずは無料で相談する</a>
+                        <!-- ★★★ LINE URL 変更箇所① ★★★ -->
                         <a href="https://lin.ee/xPW07fW" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
                             <i class="fab fa-line"></i> LINEで相談する
                         </a>
@@ -118,8 +119,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- ★★★ 料金プランセクションはここから削除されました ★★★ -->
 
         <!-- Comparison Section -->
         <section id="comparison" class="comparison">
@@ -201,6 +200,7 @@
                         <p>「何から相談すればいいか分からない」という方も大歓迎です。<br>友だち追加後、簡単なアンケートにお答えいただくだけで、貴社に合ったSNS活用法をご提案します。</p>
                     </div>
                     <div class="line-cta-button">
+                        <!-- ★★★ LINE URL 変更箇所② ★★★ -->
                         <a href="https://lin.ee/xPW07fW" target="_blank" rel="noopener noreferrer" class="btn btn-line btn-large">
                             <i class="fab fa-line"></i> 友だち追加はこちら
                         </a>
@@ -259,12 +259,8 @@
                 専門のコンサルタントが、貴社の課題に合わせた最適なプランをご提案します。<br>
                 下記フォームにご入力の上、送信してください。（2営業日以内にご返信いたします）
             </p>
-            <!-- 
-              ↓↓↓ 重要 ↓↓↓
-              以下のaction属性のURLを、ご自身のFormspreeエンドポイントURLに差し替えてください。
-              例: action="https://formspree.io/f/xxxxxxxx"
-            -->
-            <form action="https://formspree.io/f/YOUR_UNIQUE_FORM_ID" method="POST" class="contact-form">
+            <!-- ★★★ Formspree URL 変更箇所 ★★★ -->
+            <form action="https://formspree.io/f/xnnvezpe" method="POST" class="contact-form">
                 <div class="form-group">
                     <label for="name">お名前 <span class="required-badge">必須</span></label>
                     <input type="text" id="name" name="name" required>
@@ -294,7 +290,7 @@
 
 
     <div class="copyright">
-        &copy; 2023 CreaLink Inc. All Rights Reserved.
+        © 2023 CreaLink Inc. All Rights Reserved.
     </div>
 
 </body>
